# zotero_telegram_integration

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  aliases  bot.py  conftest.py  paperbot.service  pyproject.toml  requirements-dev.txt  setup.sh
.claude/: TODO.md  plan.md
docs/: translation-server-armhf.md
plans/: PLAN-collections-tag.md
tests/: conftest.py  test_bot.py
