[project]
name = "zotero-telegram-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "prek>=0.4.8",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
